--- a/style.css
+++ b/style.css
@@ -284,17 +284,17 @@ body .site-footer {
   width: 82.772020742%;
   clear: both; }
 
-body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article, body.page .hfeed .site-content .content-area main.site-main article {
+body.single .site-content .content-area main.site-main article, body.page .site-content .content-area main.site-main article {
   clear: both; }
   @media only screen and (max-width: 767px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article, body.page .hfeed .site-content .content-area main.site-main article {
+    body.single .site-content .content-area main.site-main article, body.page .site-content .content-area main.site-main article {
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding-left: 3.125%;
       padding-right: 3.125%; } }
   @media only screen and (min-width: 768px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article header.entry-header, body.page .hfeed .site-content .content-area main.site-main article header.entry-header {
+    body.single .site-content .content-area main.site-main article header.entry-header, body.page .site-content .content-area main.site-main article header.entry-header {
       clear: both;
       display: block;
       float: left;
@@ -305,10 +305,10 @@ body.single .hfeed .site-content .content-area main.site-main .site-content .con
       box-sizing: border-box;
       padding-left: 2.60416667%;
       padding-right: 2.60416667%; } }
-  body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article .entry-content, body.page .hfeed .site-content .content-area main.site-main article .entry-content {
+  body.single .site-content .content-area main.site-main article .entry-content, body.page .site-content .content-area main.site-main article .entry-content {
     clear: both; }
     @media only screen and (min-width: 768px) {
-      body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article .entry-content, body.page .hfeed .site-content .content-area main.site-main article .entry-content {
+      body.single .site-content .content-area main.site-main article .entry-content, body.page .site-content .content-area main.site-main article .entry-content {
         clear: both;
         display: block;
         float: left;
@@ -319,10 +319,10 @@ body.single .hfeed .site-content .content-area main.site-main .site-content .con
         box-sizing: border-box;
         padding-left: 2.60416667%;
         padding-right: 2.60416667%; } }
-  body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article .entry-footer, body.page .hfeed .site-content .content-area main.site-main article .entry-footer {
+  body.single .site-content .content-area main.site-main article .entry-footer, body.page .site-content .content-area main.site-main article .entry-footer {
     clear: both; }
     @media only screen and (min-width: 768px) {
-      body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main article .entry-footer, body.page .hfeed .site-content .content-area main.site-main article .entry-footer {
+      body.single .site-content .content-area main.site-main article .entry-footer, body.page .site-content .content-area main.site-main article .entry-footer {
         clear: both;
         display: block;
         float: left;
@@ -333,10 +333,10 @@ body.single .hfeed .site-content .content-area main.site-main .site-content .con
         box-sizing: border-box;
         padding-left: 2.60416667%;
         padding-right: 2.60416667%; } }
-body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main .comments-area, body.page .hfeed .site-content .content-area main.site-main .comments-area {
+body.single .site-content .content-area main.site-main .comments-area, body.page .site-content .content-area main.site-main .comments-area {
   clear: both; }
   @media only screen and (max-width: 767px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main .comments-area, body.page .hfeed .site-content .content-area main.site-main .comments-area {
+    body.single .site-content .content-area main.site-main .comments-area, body.page .site-content .content-area main.site-main .comments-area {
       clear: both;
       display: block;
       float: left;
@@ -348,7 +348,7 @@ body.single .hfeed .site-content .content-area main.site-main .site-content .con
       padding-left: 3.125%;
       padding-right: 3.125%; } }
   @media only screen and (min-width: 768px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-content .content-area main.site-main .comments-area, body.page .hfeed .site-content .content-area main.site-main .comments-area {
+    body.single .site-content .content-area main.site-main .comments-area, body.page .site-content .content-area main.site-main .comments-area {
       clear: both;
       display: block;
       float: left;
@@ -359,10 +359,10 @@ body.single .hfeed .site-content .content-area main.site-main .site-content .con
       box-sizing: border-box;
       padding-left: 2.60416667%;
       padding-right: 2.60416667%; } }
-body.single .hfeed .site-content .content-area main.site-main .site-footer, body.page .hfeed .site-footer {
+body.single .site-footer, body.page .site-footer {
   clear: both; }
   @media only screen and (max-width: 767px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-footer, body.page .hfeed .site-footer {
+    body.single .site-footer, body.page .site-footer {
       clear: both;
       display: block;
       float: left;
@@ -374,7 +374,7 @@ body.single .hfeed .site-content .content-area main.site-main .site-footer, body
       padding-left: 3.125%;
       padding-right: 3.125%; } }
   @media only screen and (min-width: 768px) {
-    body.single .hfeed .site-content .content-area main.site-main .site-footer, body.page .hfeed .site-footer {
+    body.single .site-footer, body.page .site-footer {
       clear: both;
       display: block;
       float: left;
